made the header scroll with page and fixed spacing between its items

--- a/website/css/style.css
+++ b/website/css/style.css
@@ -107,7 +107,6 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding: 0.5em;
-  max-width: 1400px;
 }
 
 .logo {
